k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: typescript-service-template
spec:
  selector:
    app: typescript-service-template
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
