k8s-manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: typescript-service-template-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: typescript-service-template
              servicePort: 80
            path: /(.*)
